--- a/Index.html
+++ b/Index.html
@@ -4,28 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studios à Louer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+            padding: 10px;
+        }
+        .gallery img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 5px;
+            transition: transform 0.3s ease;
+            cursor: pointer;
+        }
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 10px;
+        }
+        .close {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            font-size: 30px;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto py-10 px-5">
-        <h1 class="text-3xl font-bold text-center mb-8">Galerie des Studios à Louer</h1>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-            <a href="img/studio1.jpg" data-lightbox="studios" class="block shadow-lg hover:shadow-xl rounded-lg overflow-hidden">
-                <img src="img/studio1.jpg" alt="Studio 1" class="w-full h-60 object-cover">
-            </a>
-            <a href="img/studio2.jpg" data-lightbox="studios" class="block shadow-lg hover:shadow-xl rounded-lg overflow-hidden">
-                <img src="img/studio2.jpg" alt="Studio 2" class="w-full h-60 object-cover">
-            </a>
-            <a href="img/studio3.jpg" data-lightbox="studios" class="block shadow-lg hover:shadow-xl rounded-lg overflow-hidden">
-                <img src="img/studio3.jpg" alt="Studio 3" class="w-full h-60 object-cover">
-            </a>
-            <a href="img/studio4.jpg" data-lightbox="studios" class="block shadow-lg hover:shadow-xl rounded-lg overflow-hidden">
-                <img src="img/studio4.jpg" alt="Studio 4" class="w-full h-60 object-cover">
-            </a>
+<body>
+    <div class="container">
+        <h1>Galerie Studio</h1>
+        <div class="gallery">
+            <img src="img/studio1.jpg" alt="Studio 1" onclick="openModal(this)">
+            <img src="img/studio2.jpg" alt="Studio 2" onclick="openModal(this)">
+            <img src="img/studio3.jpg" alt="Studio 3" onclick="openModal(this)">
+            <img src="img/studio4.jpg" alt="Studio 4" onclick="openModal(this)">
+            <img src="img/studio5.jpg" alt="Studio 5" onclick="openModal(this)">
+            <img src="img/studio6.jpg" alt="Studio 6" onclick="openModal(this)">
+            <img src="img/studio7.jpg" alt="Studio 7" onclick="openModal(this)">
+            <img src="img/studio8.jpg" alt="Studio 8" onclick="openModal(this)">
+            <img src="img/studio9.jpg" alt="Studio 9" onclick="openModal(this)">
+            <img src="img/studio10.jpg" alt="Studio 10" onclick="openModal(this)">
         </div>
     </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <div class="modal" id="modal" onclick="closeModal()">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img id="modalImg">
+    </div>
+    <script>
+        function openModal(imgElement) {
+            document.getElementById('modal').style.display = 'flex';
+            document.getElementById('modalImg').src = imgElement.src;
+        }
+        function closeModal() {
+            document.getElementById('modal').style.display = 'none';
+        }
+    </script>
 </body>
 </html>
