--- a/Index.html
+++ b/Index.html
@@ -70,6 +70,13 @@
 <body>
     <div class="container">
         <h1>Galerie Studio</h1>
+        <fieldset>
+            <legend>Nous Contacter</legend>
+            <p><strong>Mr. & Mme Adjadj</strong> </p>
+            <p><strong>tel: +33 6 18 82 18 12 / +33 6 66 96 80 76</strong> </p>
+            <p><strong>Email: antonin.adjadj@free.fr</strong></p>
+          
+          </fieldset>
         <div class="gallery">
             <img src="img/studio1.jpg" alt="Studio 1" onclick="openModal(this)">
             <img src="img/studio2.jpg" alt="Studio 2" onclick="openModal(this)">
